fix overflow in select elements

--- a/src/style/card.css
+++ b/src/style/card.css
@@ -29,6 +29,7 @@
 }
 
 .card select {
+  max-width: 160px;
   background-color: var(--card-bg-color);
   color: var(--card-text-color);
   border: 0;
